lab1/Test/L1-A-7-57.cmm
float ;
int h ( struct {
  int b9j6KPid ;
  struct {
    int Xv ;
  }ES20PJdeJx ;
  struct HCMZp_T1dQvPCWpCNE8 MNGYxLJdSqbsX ;
  int KEyxrX ;
`}jHfsK7pssMlZH7 , struct wjL4l7siHaeTl2 ndsxqTPYvvjM2c 
  ) {
  int yiNEnGLXt4 ;
  struct rWfmmOZPY HKG3KDLn ;
  struct S0RDPmlWfUp0 hPVIGCoXbB ;
  struct yy5xhWsDadSmx U , ulHJYr3xIGA ;
  int WBYy = legzkC ;
  if ( OVSoR_jg7is_LCCQWxl )   return zjsO_ZNeu = 
    xx + IUuGD4q4AwkWHGg / Y2CrUMXEGfsylvx [ Nif87PnkDA 
    || F && Gt0fDZs4JLPjP90 == fUSr0_A1At_6Tdb - RiPQpbccS4K 
    * ! jVNtA5CoOzGGI ( n >= Hp88j7ORUCwPALlXfC + xUZsKEmzJsa3cZ 
    / ( m0YzRkY42S30ggMvX0K <= ( q || qjolyKHNZs4 && IYt 
    < - - TafIoIFdpM4gZsJ8rp5m ( exFmbS77Nr3ZB898gu , 
    D2xOUrhM0zcqWKnQ ) ) > 601224481.758047575 ) * - HdRFT618P060c01 
    ) * 1192150760 != - ! Z1S4p3Ebh ( ) . xz8 ] ;

}
struct lB7A6eQNp {
}Y3S8t5hELrnMR [ 410358346 ] 
;
int yDC7EFCQASH , LueDvksifRoB 

;
int pCrG1zEOgcL1stQ85l ( ) {
}
int uRsZEdICgRwJmu29_pl ( ) {
}
int jY ( ) {
  while ( unkql15SWa ) {
  }
}
int ;
int DlxS20TVu ( ) {
}
int uozj4dI ( ) {
}
int ;
int C ( ) {
}
int ;
int ;
int ;
int ;
int t_gpn0oRD7Ptle6PJc ( ) {
  dNaq8 ;
  XFVLGaCgr ;
  p7zTcLA ;
  JVt_rF2kuOdbfc ;
  if ( OsyiBJWUCGxPXW )   N3kMkoH5WvVPqIj4n ;
else   vl4fDRJSiUtKth8 ;

}
int ;
int ;#
int ;
int ;
int ;
int YvSSSajHA ( ) {
  Fjz8 ;
}
int ;
int CDdvQUx19jnIV1BUIWJ ( ) {
{
    grrj89uH8koB ;
  }}
int ;
int ;
int ;
int ;
int ;
int Ob74worJT8LpeIsce ( ) {
  while ( IugMJu_xhTMDppiOS )   AMtrF3DfKN ;

  cec ;
  nQQ_QcC0iq4 ;
}
int ;
int ;
int ;
int COEZnxV8pJ ( ) {
}
int U ( ) {
  jpLwaT9QvM5IIyj ;
}
int CoLiUYYD ( ) {
}
int ;
int jleXVL7xmtUh1a ( ) {
  uDmln ;
}
int ;
int ;
int hSwiK5H ( ) {
  if ( ltI3TEu8t2qwfVEdfA )   sLrKIhZ5ct ;
else   if ( VMUiB5p )   R2oZg67xGL0SztzZm1I ;


}
